--- a/myfavoritethings.html
+++ b/myfavoritethings.html
@@ -18,8 +18,11 @@
    Below I have a provided some "key essentials" to knowing more about me and my interests.
 </p>
 
-<img src="chocice.jpg" width="300" class="center" >
+<p>
 
+<img src="chocice.jpg" width="300" al="centered image" />
+
+</p>
 <UL>
     <LI>Favorite Food: Ice Cream</LI>
     <LI>Favorite Color: Light Blue</LI>
@@ -30,7 +33,10 @@
     <li>Favorite Song: Unforgettable</li>
 </UL>
 
+<img src="gossip.jpg" width="300" class="center" >
+
 
 </body>
 
 </html>
+
