--- a/myfavoritethings.html
+++ b/myfavoritethings.html
@@ -9,10 +9,18 @@
 
 <body>
 
+<p>
 
-<h1>My Favorite...</h1>
+<h1><span class=""title">My Favorite Is...</h1>
 
-<h2>Q & A</h2>
+</p>
+
+<p>
+
+<h2>Q & A:</h2>
+
+</p>
+
 
 <p>
    Below I have a provided some "key essentials" to knowing more about me and my interests.
@@ -38,5 +46,5 @@
 
 </body>
 
-</html>
+
 
