--- a/myfamily.html
+++ b/myfamily.html
@@ -38,7 +38,7 @@ I have an older brother Ryan who is 22 years old and just graduated with a Compu
 </p>
 
 <p>
-    <img src="IMG_2496.jpg" width="300" class="center" >
+    <img src="IMG_2496.jpg" width="300" >
 
 </p>
 
